# chrono-seo-ark

./: .env.example  .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: chrono-seo-pulse.yml
agent/: Cargo.toml  index.html  template.html
agent/src/: Cargo.toml  lib.rs  main.rs
agent/src/engine/: geometry.rs  mod.rs  stability.rs
agent/src/protocols/: cherenkov_lens.rs  crypto_pulse.rs  gecko_provider.rs  liquid_sync.rs  mod.rs  news_provider.rs  serp_provider.rs  temporal_projectile.rs
benches/: engine_performance.rs
config/: ark_settings.toml
integration/: client_bridge.js  webhook_handler.py
interface/: dashboard.js  index.html  style.css
reports/: performance_log.md
scripts/: speed_reporter.py
tests/: latency_benchmarks.rs  protocol_integrity.rs  stress_test_geometric.rs  vault_consistency.rs
vault/: truth-vault.json
