[package]
name = "chrono-seo-agent"
version = "1.0.0"
authors = ["The First Architect <isaac.andrew@ark-systems.io>"]
edition = "2021"
description = "High-performance SEO pulse agent powered by Penta-V Geometric Stability."

[dependencies]
# الأساسيات للنبض والمزامنة
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# الوقت والإعدادات
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
toml = "0.8"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true # لتقليل حجم الملف النهائي في CI

[[bench]]
name = "engine_performance"
harness = false
