[package]
name = "chrono-seo-agent"
version = "1.0.0"
authors = ["The First Architect <isaac.andrew@ark-systems.io>"]
edition = "2021"
description = "High-performance SEO pulse agent powered by Penta-V Geometric Stability."

[lib]
# Defines the library component to expose modules to external integration tests.
name = "chrono_seo_agent"
path = "src/lib.rs"

[[bin]]
# The main entry point for the autonomous pulse execution.
name = "chrono-seo-agent"
path = "src/main.rs"

[dependencies]
# Core async runtime and network stack
tokio = { version = "1.35", features = ["full"] }

# Network: reqwest with native-tls/rustls-tls for secure multi-sector API calls.
# Enabled 'json' and 'blocking' for Gemini API and data providers.
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }

# Serialization and Data Architecture
# Essential for Truth-Vault deployment and JSON signaling.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Configuration and Logic Utilities
config = "0.13"
toml = "0.8"

# Parallel Execution: Explicitly enabling futures for 'join_all' and 'BoxFuture'.
# Required for Protocol 15 (Cherenkov Lens) to unify different provider return types.
futures = "0.3"

[dev-dependencies]
# Performance profiling suite for Criterion-based analysis.
criterion = { version = "0.5", features = ["async_tokio"] }

# --- PATH CORRECTIONS FOR INTEGRATION TESTING ---
# Mapping external files located in the Workspace Root to the Agent crate scope.

[[bench]]
name = "engine_performance"
path = "../benches/engine_performance.rs"
harness = false

[[test]]
name = "stress_test_geometric"
path = "../tests/stress_test_geometric.rs"

[[test]]
name = "protocol_integrity"
path = "../tests/protocol_integrity.rs"

[[test]]
name = "vault_consistency"
path = "../tests/vault_consistency.rs"

[[test]]
name = "latency_benchmarks"
path = "../tests/latency_benchmarks.rs"

[profile.release]
# Maximum optimization profile for CI-based high-frequency execution.
# Aligned with Ark Systems Protocol 19 for minimal binary size and peak throughput.
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
